--- a/main.ioc
+++ b/main.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 KeepUserPlacement=true
-Mcu.CPN=STM32F411RET6
+Mcu.CPN=STM32F411CEU6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
@@ -12,8 +12,8 @@ Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=USART2
 Mcu.IPNb=5
-Mcu.Name=STM32F411R(C-E)Tx
-Mcu.Package=LQFP64
+Mcu.Name=STM32F411C(C-E)Ux
+Mcu.Package=LQFP48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
@@ -36,7 +36,7 @@ Mcu.Pin9=PA6
 Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F411RETx
+Mcu.UserName=STM32F411CEUx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -110,7 +110,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F411RETx
+ProjectManager.DeviceId=STM32F411CEUx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
