--- a/main.ioc
+++ b/main.ioc
@@ -9,23 +9,29 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=SPI2
+Mcu.IP4=SYS
+Mcu.IP5=TIM10
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F411C(C-E)Ux
-Mcu.Package=LQFP48
+Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin11=PB10
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB6
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -33,7 +39,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=19
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -46,9 +52,10 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
@@ -57,10 +64,12 @@ PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=USART_TX
@@ -80,6 +89,12 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -88,18 +103,17 @@ PB4.Locked=true
 PB4.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPXTI13
+PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PH0\ -\ OSC_IN.Locked=true
+PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
+PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
 PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -132,7 +146,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -166,8 +180,6 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=50.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -175,10 +187,21 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=25.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+TIM10.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM10.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM10.Period=5000-1
+TIM10.Prescaler=10000-1
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
