--- a/main.ioc
+++ b/main.ioc
@@ -123,7 +123,7 @@ ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
+ProjectManager.DeletePrevious=false
 ProjectManager.DeviceId=STM32F411CEUx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.0
 ProjectManager.FreePins=false
@@ -187,15 +187,16 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=25.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI2.CalculateBaudRate=781.25 KBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM10.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM10.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM10.Period=5000-1
-TIM10.Prescaler=10000-1
+TIM10.Prescaler=1000-1
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
