--- a/main.ioc
+++ b/main.ioc
@@ -25,8 +25,10 @@ Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configUSE_TICK_HOOK,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;lvgl_task,24,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_TICK_HOOK=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=true
