--- a/main.ioc
+++ b/main.ioc
@@ -26,7 +26,8 @@ Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_TICK_HOOK,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_TICK_HOOK,FootprintOK,Mutexes01
+FREERTOS.Mutexes01=lv_timer_handler_mutex,Dynamic,NULL
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;lvgl_task,24,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_TICK_HOOK=1
 File.Version=6
