压力测试,准备移植到clion

--- a/main.ioc
+++ b/main.ioc
@@ -27,8 +27,8 @@ Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_TICK_HOOK,FootprintOK,Mutexes01
-FREERTOS.Mutexes01=lv_timer_handler_mutex,Dynamic,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;lvgl_task,24,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Mutexes01=lv_timer_handler_mutex,Dynamic,NULL;myMutex02,Dynamic,NULL
+FREERTOS.Tasks01=defaultTask,16,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;lvgl_task_1,24,512,StartTask02,Default,NULL,Dynamic,NULL,NULL;lvgl_task_2,25,512,StartTask03,Default,NULL,Dynamic,NULL,NULL;lvgl_task_3,24,512,StartTask04,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_TICK_HOOK=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
